.tox/py26/log/py26-2.log
actionid: py26
msg: installpkg
cmdargs: ['/Users/leahvelleman/src/morpho/.tox/py26/bin/pip', 'install', '/Users/leahvelleman/src/morpho/.tox/dist/morpho-0.0.zip']

DEPRECATION: Python 2.6 is no longer supported by the Python core team, please upgrade your Python. A future version of pip will drop support for Python 2.6
Processing ./.tox/dist/morpho-0.0.zip
Building wheels for collected packages: morpho
  Running setup.py bdist_wheel for morpho: started
  Running setup.py bdist_wheel for morpho: finished with status 'error'
  Complete output from command /Users/leahvelleman/src/morpho/.tox/py26/bin/python2.6 -u -c "import setuptools, tokenize;__file__='/private/var/folders/05/6rw3pz3n6n57db3pqf5r5pg00000gn/T/pip-O3psg_-build/setup.py';f=getattr(tokenize, 'open', open)(__file__);code=f.read().replace('\r\n', '\n');f.close();exec(compile(code, __file__, 'exec'))" bdist_wheel -d /var/folders/05/6rw3pz3n6n57db3pqf5r5pg00000gn/T/tmpsN40m4pip-wheel- --python-tag cp26:
  Traceback (most recent call last):
    File "<string>", line 1, in <module>
    File "/private/var/folders/05/6rw3pz3n6n57db3pqf5r5pg00000gn/T/pip-O3psg_-build/setup.py", line 48, in <module>
      tests_require = ['pytest']
    File "/System/Library/Frameworks/Python.framework/Versions/2.6/lib/python2.6/distutils/core.py", line 138, in setup
      ok = dist.parse_command_line()
    File "/Users/leahvelleman/src/morpho/.tox/py26/lib/python2.6/site-packages/setuptools/dist.py", line 442, in parse_command_line
      result = _Distribution.parse_command_line(self)
    File "/System/Library/Frameworks/Python.framework/Versions/2.6/lib/python2.6/distutils/dist.py", line 460, in parse_command_line
      args = self._parse_command_opts(parser, args)
    File "/Users/leahvelleman/src/morpho/.tox/py26/lib/python2.6/site-packages/setuptools/dist.py", line 756, in _parse_command_opts
      nargs = _Distribution._parse_command_opts(self, parser, args)
    File "/System/Library/Frameworks/Python.framework/Versions/2.6/lib/python2.6/distutils/dist.py", line 518, in _parse_command_opts
      cmd_class = self.get_command_class(command)
    File "/Users/leahvelleman/src/morpho/.tox/py26/lib/python2.6/site-packages/setuptools/dist.py", line 576, in get_command_class
      self.cmdclass[command] = cmdclass = ep.load()
    File "/Users/leahvelleman/src/morpho/.tox/py26/lib/python2.6/site-packages/pkg_resources/__init__.py", line 2409, in load
      return self.resolve()
    File "/Users/leahvelleman/src/morpho/.tox/py26/lib/python2.6/site-packages/pkg_resources/__init__.py", line 2415, in resolve
      module = __import__(self.module_name, fromlist=['__name__'], level=0)
    File "/Users/leahvelleman/src/morpho/.tox/py26/lib/python2.6/site-packages/wheel/bdist_wheel.py", line 407
      ignore=lambda x, y: {'PKG-INFO', 'requires.txt', 'SOURCES.txt',
                                     ^
  SyntaxError: invalid syntax
  
  ----------------------------------------
  Failed building wheel for morpho
  Running setup.py clean for morpho
Failed to build morpho
Installing collected packages: morpho
  Running setup.py install for morpho: started
    Running setup.py install for morpho: finished with status 'done'
Successfully installed morpho-0.0
